[gd_scene load_steps=7 format=3 uid="uid://b03uses1pl5yj"]

[ext_resource type="Script" uid="uid://4es07pvc07tf" path="res://scenes/terrain_blocks/procedual_map_chunk_base.gd" id="1_xy2rm"]
[ext_resource type="PackedScene" uid="uid://mh64i3lrey8" path="res://scenes/terrain_blocks/map_chunk_anchor_point.tscn" id="2_074vu"]

[sub_resource type="BoxMesh" id="BoxMesh_nnhcb"]

[sub_resource type="StandardMaterial3D" id="StandardMaterial3D_cgueo"]
albedo_color = Color(0.794134, 0.153642, 0.489181, 1)

[sub_resource type="ConcavePolygonShape3D" id="ConcavePolygonShape3D_nnhcb"]
data = PackedVector3Array(-0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, -0.5, 0.5, -0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, 0.5, -0.5, 0.5, 0.5, 0.5, 0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, 0.5, 0.5, -0.5, 0.5, -0.5, -0.5, -0.5, 0.5, -0.5, 0.5, 0.5, -0.5, -0.5, -0.5, -0.5, -0.5)

[sub_resource type="BoxShape3D" id="BoxShape3D_830ns"]
size = Vector3(15, 4, 3)

[node name="ProcedualMapChunk" type="Node3D"]
script = ExtResource("1_xy2rm")

[node name="Anchors" type="Node3D" parent="."]

[node name="MapChunkAnchorPoint" parent="Anchors" instance=ExtResource("2_074vu")]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 7.5, 0, 0)

[node name="MapChunkAnchorPoint2" parent="Anchors" instance=ExtResource("2_074vu")]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 1.5)

[node name="MapChunkAnchorPoint3" parent="Anchors" instance=ExtResource("2_074vu")]
transform = Transform3D(-4.37114e-08, 0, -1, 0, 1, 0, 1, 0, -4.37114e-08, -7.5, 0, 0)

[node name="MapChunkAnchorPoint4" parent="Anchors" instance=ExtResource("2_074vu")]
transform = Transform3D(-1, 0, 8.74228e-08, 0, 1, 0, -8.74228e-08, 0, -1, -4.6, 0, -1.5)

[node name="Mesh" type="Node3D" parent="."]

[node name="CSGBox3D" type="MeshInstance3D" parent="Mesh"]
transform = Transform3D(15, 0, 0, 0, 4, 0, 0, 0, 3, 0, 1, 0)
mesh = SubResource("BoxMesh_nnhcb")
surface_material_override/0 = SubResource("StandardMaterial3D_cgueo")

[node name="StaticBody3D" type="StaticBody3D" parent="Mesh/CSGBox3D"]

[node name="CollisionShape3D" type="CollisionShape3D" parent="Mesh/CSGBox3D/StaticBody3D"]
shape = SubResource("ConcavePolygonShape3D_nnhcb")

[node name="CollisionCheck" type="Area3D" parent="."]

[node name="CollisionShape3D" type="CollisionShape3D" parent="CollisionCheck"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("BoxShape3D_830ns")
